yaml/lnmp.yaml
# 名称空间
apiVersion: v1
kind: Namespace
metadata:
  name: lnmp
---
apiVersion: v1
kind: Service
metadata:
  name: node
  namespace: lnmp
spec:
  selector:
    app: app
  type: NodePort
  ports:
    - name: nginx
      protocol: TCP
      port: 80 # 容器端口
    - name: php
      protocol: TCP
      port: 9000 # 容器端口
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 31306 # 节点暴露的端口
    - name: redis
      protocol: TCP
      port: 6397
      targetPort: 6397
      nodePort: 31397 # 节点暴露的端口
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 31017 # 节点暴露的端口
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
  namespace: lnmp
  labels:
    k8s-app: app
spec:
  selector:
    matchLabels:
     app: app
  replicas: 2
  template:
    metadata: # 元信息
      labels: # 标签
        app: app
    spec:
      containers:  # 容器配置
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx
              mountPath: /usr/share/nginx/html
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
            - name: vhost
              mountPath: /etc/nginx/conf.d
        - name: php
          image: php
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
              name: php
          volumeMounts:
            - name: php
              mountPath: /var/www/html
            - name: php-ini
              mountPath: /usr/local/etc/php/php.ini
          ##拉取镜像时的用户认证,没有的时候注释掉这2行
          #imagePullSecrets:
          #- name: registrypullsecret
        - name: mysql
          image: mysql
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-cnf
              mountPath: /etc/mysql/my.cnf
        - name: redis
          image: redis:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6397
              name: redis
          volumeMounts:
            - name: redis-conf
              mountPath: /etc/redis/redis.conf
        - name: mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-conf
              mountPath: /etc/mongo/mongod.conf
      volumes:
        - name: nginx
          hostPath: # 指向本地文件
            path: /mnt/www
        - name: nginx-conf
          hostPath: # 指向本地文件
            path: /mnt/tool/etc/nginx/nginx.conf
        - name: vhost
          hostPath: # 指向本地文件
            path: /mnt/tool/etc/nginx/vhost
        - name: php
          hostPath:
            path: /mnt/www
        - name: php-ini
          hostPath:
            path: /mnt/tool/etc/php/php.ini
        - name: mysql-cnf
          hostPath:
            path: /mnt/tool/etc/mysql/my.cnf
        - name: redis-conf
          hostPath:
            path: /mnt/tool/etc/redis/redis.cnf
        - name: mongo-conf
          hostPath:
            path: /mnt/tool/etc/mongo/mongo.cnf
  minReadySeconds: 5 # 在等待设置的时间后才进行升级
  strategy:
  # indicate which strategy we want for rolling update
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # 升级过程中最多可以比原先设置多出的POD数量
      maxUnavailable: 1 # 升级过程中最多几个POD处于无法提供服务的状态
# 入口路由
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: lnmp
  name: https-route
spec:
  entryPoints:
    - https
  tls:
    secretName: ls-tls
  routes:
    - match: Host(`ls.com`, `www.ls.com`, `b.ls.com`) # 首页
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`apim.ls.com`, `apia.ls.com`) # 首页
      kind: Rule
      services:
        - name: swoole
          port: 9501
