yaml/mongo.yaml
# 内部端口服务
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: lnmp
  labels:
    app: app
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: app-mongo
# mongo控制器
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: lnmp
  labels:
    app: app
spec:
  # minReadySeconds: 5
  replicas: 2
  serviceName: mongo
  selector:
    matchLabels:
      app: app-mongo
  template:
    metadata:
      labels:
        app: app-mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - name: mongo
              protocol: TCP
              containerPort: 27017
          volumeMounts:
            - name: conf
              mountPath: /etc/mongo/mongod.conf
            - name: data
              mountPath: /var/lib/mongo
        #imagePullSecrets:
        # - name: registrypullsecret
      volumes:
        - name: conf
          hostPath: # 指向本地文件
            path: /mnt/tool/etc/mongo/mongod.conf
        - name: data
          hostPath: # 指向本地文件
            path: /var/lib/mongo
# 入口路由
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: lnmp
  name: mongo-route
spec:
  entryPoints:
    - mongo
  routes:
    - match: HostSNI(`*`) # 首页
      services:
        - name: mongo
          port: 27017
