yaml/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-master
spec: 
  selector: 
    matchLabels:
      app: mysql-master # 匹配 .spec.template.metadata.labels
  serviceName: mysql
  replicas: 3
  template:
    metadata:
      labels:
        app: mysql-master # 匹配 .spec.selector.matchLabels
    spec:
      affinity: # 节点分布
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - node1
                - node2
                - node3
      containers:
      - name: mysql
        image: mysql
        imagePullPolicy: IfNotPresent
        # command: ["mysqld_safe", "-c"]
        args: ["--default-authentication-plugin=mysql_native_password"]
        ports:
        - containerPort: 3306
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        livenessProbe: ## 存活探针
          exec:
            command:
            - /bin/sh
            - "-c"
            - MYSQL_PWD="${MYSQL_ROOT_PASSWORD}"
            - mysql -h 127.0.0.1 -u root -e "SELECT 1"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 2 # 超时设定
        readinessProbe: ## 就绪探针
          exec:
            command:
            - /bin/sh
            - "-c"
            - MYSQL_PWD="${MYSQL_ROOT_PASSWORD}"
            - mysql -h 127.0.0.1 -u root -e "SELECT 1"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
      volumes:
      - name: conf
        emptyDir: {}
      - name: config-map
        configMap:
          name: mysql
      - name: data
        persistentVolumeClaim:
          claimName: mysql-pvc
## mysql-shell
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-shell
  labels:
    app: mysql
spec:
  containers:
    - name: myshell
      image: registry.cn-beijing.aliyuncs.com/baoweikai/mysql-shell
      imagePullPolicy: IfNotPresent
      command:
        - /bin/sh
        - "-c"
        - --
      args: [ "while true; do sleep 30; done;" ]
      volumeMounts:
      - name: conf
        mountPath: /etc/mysql/cluster.js
        subPath: cluster.js
  volumes:
  - name: conf
    configMap:
      name: mysql
## 服务
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  #sessionAffinity: ClientIP ## 开启了session保持
  #sessionAffinityConfig:
  #  clientIP:
  #    timeoutSeconds: 10800 ## 10800秒,3小时
  type: ClusterIP
  clusterIP: None
  selector:
    app: mysql-master
  ports:
  - port: 3306
    targetPort: 3306 # 应用端口
## 入口路由
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: default
  name: mysql-route
spec:
  entryPoints:
  - mysql
  #tls:
  #  secretName: mysql-tls
  routes:
  - match: HostSNI(`*`) # 首页
    services:
    - name: mysql
      port: 3306

## openssl 命令生成 CA 证书
# openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout tls.key -out tls.crt -subj "/CN=mysql.ls.com"
## 创建secret对象来存储证书 # kubectl create secret mysql-tls 删除
# kubectl create secret tls mysql-tls --cert=tls.crt --key=tls.key


## openssl req -new -sha256 -out tls.csr -key ca.key -config ca.conf
