yaml/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
spec:
  sessionAffinity: ClientIP ## 开启了session保持
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800 ## 10800秒,3小时
  ports:
    - port: 80 # 容器端口
      # name: http
      #protocol: TCP
      targetPort: 80 # 应用端口
  selector:
    app: nginx
# nginx部署
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: nginx
  # namespace: default
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - name: http
              containerPort: 80  ## http端口
          livenessProbe: ## 应用存活探针,如果返回失败重启应用
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30 # 初始化之后30秒再他探测
            periodSeconds: 10 # 探测间隔10秒
            timeoutSeconds: 5
          readinessProbe: ## 就绪探针,失败将从后端负载中剔除
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30 # 初始化之后30秒再他探测
            periodSeconds: 10 # 探测间隔10秒
            timeoutSeconds: 5 # 超时5秒探测失败
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html
            - name: conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: vhost
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: www
          hostPath: # 指向本地文件
            path: /mnt/www
        - name: conf
          configMap:
            name: nginx
        - name: vhost
          hostPath: # 指向本地文件
            path: /mnt/k8s/etc/nginx/vhost
# 入口路由
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  # namespace: default
  name: https-route
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`ls.com`, `www.ls.com`, `b.ls.com`, `img.ls.com`) # 首页
    kind: Rule
    services:
    - name: nginx
      port: 80
  tls:
    certResolver: default
    domains:
      - main: "ls.com"
        sans:
          - "ls.com"
          - "www.ls.com"
          - "b.ls.com"
          - "img.ls.com"

# openssl genrsa -out cakey.pem 2048 # 生成私钥文件
# openssl req -new -x509 -key cakey.pem -out cacert.pem -days 3650  # 生成自签证书指明私钥文件，证书保存路径，有效期限等
