yaml/php.yaml
apiVersion: v1
kind: Service
metadata:
  name: swoole
  namespace: default
  labels:
    app: php
spec:
  sessionAffinity: ClientIP ## 开启了session保持
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800 ## 10800秒,3小时
  ports:
    - port: 9501 # 容器端口
      targetPort: 9501 # 应用端口
  selector:
    app: php
---
apiVersion: apps/v1 # version
kind: Deployment
metadata:
  name: php
  namespace: default
  labels:
    app: php
spec:
  replicas: 3
  selector:
    matchLabels:
      app: php
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: php
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - docker-desktop
                #- node1
                #- node2
                #- node3
      containers:
        - name: php
          image: registry.cn-beijing.aliyuncs.com/baoweikai/php ## php:fpm-alpine 自定义镜像
          imagePullPolicy: IfNotPresent
          ##拉取镜像时的用户认证,没有的时候注释掉这2行
          #imagePullSecrets:
          #- name: registrypullsecret
          ports:
            - containerPort: 9501
          command: [ "/bin/sh", "-c", "php /var/www/html/$(HTML_DIR)think swoole" ]
          livenessProbe: ## 存活探针,容器是否正常运行,如果失败将重启pod
            tcpSocket:
              port: 9501
            initialDelaySeconds: 30
            periodSeconds: 10 # 探测频率,默认10
            timeoutSeconds: 5 # 超时秒数,默认1
          readinessProbe: ## 就绪探针,失败将从后端负载中剔除
            tcpSocket:
              port: 9501
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2 # 超时设定
          volumeMounts:
            - name: html
              mountPath: /var/www/html
            - name: php-ini
              mountPath: /usr/local/etc/php/php.ini
              subPath: php.ini
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: php-pvc
        - name: php-ini
          configMap:
            name: php
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  # namespace: default
  name: swoole-route
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`api.ls.com`) # 首页
      kind: Rule
      services:
        - name: swoole
          port: 9501
      #middlewares:
        #- name: php-replacepathregex
        # namespace: default
        # A namespace specification such as above is ignored
        # when the cross-provider syntax is used.

## openssl 命令生成 CA 证书
# openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout tls.key -out tls.crt -subj "/CN=mysql.ls.com"
## 创建secret对象来存储证书 # kubectl create secret mysql-tls 删除
# kubectl create secret tls default --cert=tls.crt --key=tls.key


## openssl req -new -sha256 -out tls.csr -key ca.key -config ca.conf
