yaml/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
  labels:
    app: app-redis
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: app-redis
# redis控制器
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: default
  labels:
    app: app-redis
spec:
  # minReadySeconds: 5
  replicas: 3
  serviceName: redis
  selector:
    matchLabels:
      app: app-redis
  template:
    metadata:
      labels:
        app: app-redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          imagePullPolicy: IfNotPresent
          #imagePullSecrets:
          # - name: registrypullsecret
          ports:
            - containerPort: 6379
              protocol: TCP
          livenessProbe: ## 存活探针
            tcpSocket:
              port: 6379
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2 # 超时设定
          readinessProbe: ## 就绪探针
            exec:
              command:
              - /bin/sh
              - "-c"
              - redis-cli -h 127.0.0.1 -p 6379 -a "${REDIS_ROOT_PASSWORD}"
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: conf
              mountPath: /usr/local/etc/redis/redis.conf
              subPath: redis.conf
      volumes:
        - name: conf
          configMap:
            name: redis
# 入口路由
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: default
  name: redis-route
spec:
  entryPoints:
    - redis
  tls:
    #secretName: redis-tls
    certResolver: default
    domains:
      - main: "ls.com"
        sans:
          - "redis.ls.com"
  routes:
    - match: HostSNI(`redis.ls.com`) # 首页
      services:
        - name: redis
          port: 6379

## ./redis-trib.rb create --replicas 1 127.0.0.1:7001 127.0.0.1:7002 127.0.0.1:7003 127.0.0.1:7004 127.0.0.1:7005 127.0.0.1:7000
