yaml/traefik.yaml
##### rbac
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: traefik
spec:
  ports:
    - name: admin
      port: 8080
  selector:
    app: traefik
# traefik守护进程
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: kube-system
  name: traefik-ingress-controller
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      name: traefik
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 1
      containers:
        - image: traefik:latest
          name: traefik-ingress-lb
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              hostPort: 80          ## 将容器端口绑定所在服务器的 80 端口
            - name: https
              containerPort: 443
              hostPort: 443         ## 将容器端口绑定所在服务器的 443 端口
            - name: php
              containerPort: 9000
              hostPort: 9000        ## 将容器端口绑定所在服务器的 9000 端口
            - name: mysql
              containerPort: 3306
              hostPort: 3306        ## 将容器端口绑定所在服务器的 3306 端口
            - name: redis
              containerPort: 6379
              hostPort: 6379        ## 将容器端口绑定所在服务器的 6379 端口
            - name: mongo
              containerPort: 27017
              hostPort: 27017       ## 将容器端口绑定所在服务器的 27017 端口
            - name: admin
              containerPort: 8080   ## Traefik Dashboard
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 1000m
              memory: 1024Mi
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - --configfile=/config/traefik.yaml
          volumeMounts:
            - mountPath: "/config"
              name: "config"
      volumes:
        - name: config
          configMap:
            name: traefik-config 
      tolerations:              ## 设置容忍所有污点，防止节点被设置污点
        - operator: "Exists"
      nodeSelector:             ## 设置node筛选器，在特定label的节点上启动
        IngressProxy: "true"
# 入口路由
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: kube-system
  name: traefik-route
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`traefik.ls.com`) ## traefik后台
      kind: Rule
      services:
        - name: traefik
          port: 8080
  #tls:
  #  certResolver: default
  #  domains:
  #    - main: "ls.com"
  #      sans:
  #        - "traefik.ls.com"

# kubectl label node node1 IngressProxy=true
